style(后端模块): 格式修改
1. 修改 pom.xml 更新了一些依赖的版本，引入了一些新依赖和新插件
2. 修改 application.yaml，增加了 mybatis-plus 的物理删除标记配置